tweak api
