# public/openapi.json
@@ -5,7 +5,7 @@
   "security": [],
   "servers": [{ "url": "https://wordlegpt.vercel.app" }],
   "paths": {
-    "/api/answers": {
+    "/api/answers/stats": {
       "get": {
         "summary": "Returns the number of past Wordle answers",
         "description": "Gets past Wordle answers from the Rock Paper Shotgun website and returns the number of past answers.",
@@ -85,6 +85,55 @@
         }
       }
     },
+    "/api/guesses/guess": {
+      "get": {
+        "summary": "Returns some guesses",
+        "description": "Returns a list of random guesses that are valid answers but not in the answers list from the Rock Paper Shotgun website.",
+        "operationId": "getGuesses",
+        "parameters": [
+          {
+            "in": "query",
+            "name": "limit",
+            "schema": { "type": "integer", "default": 1, "minimum": 1 },
+            "description": "The number of random guesses to return."
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "A list of random guesses",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "guesses": {
+                      "type": "array",
+                      "items": { "type": "string" }
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Invalid request parameters",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "error": {
+                      "type": "string",
+                      "description": "Error message"
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/api/guesses/match": {
       "post": {
         "summary": "Retrieve matching guesses based on the provided regex pattern.",
@@ -146,7 +195,7 @@
         }
       }
     },
-    "/api/guesses": {
+    "/api/guesses/stats": {
       "get": {
         "description": "Returns the number of guesses and potentially winning guesses",
         "operationId": "getGuessesLength",
@@ -165,55 +214,6 @@
                     "potentiallyWinningGuessesLength": {
                       "type": "integer",
                       "description": "The number of potentially winning guesses"
-                    }
-                  }
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/api/guesses/shoot": {
-      "get": {
-        "summary": "Generates random guesses",
-        "description": "Returns a list of random guesses that are valid answers but not in the answers list from the Rock Paper Shotgun website.",
-        "operationId": "getGuesses",
-        "parameters": [
-          {
-            "in": "query",
-            "name": "limit",
-            "schema": { "type": "integer", "default": 1, "minimum": 1 },
-            "description": "The number of random guesses to return."
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "A list of random guesses",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "object",
-                  "properties": {
-                    "guesses": {
-                      "type": "array",
-                      "items": { "type": "string" }
-                    }
-                  }
-                }
-              }
-            }
-          },
-          "400": {
-            "description": "Invalid request parameters",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "object",
-                  "properties": {
-                    "error": {
-                      "type": "string",
-                      "description": "Error message"
                     }
                   }
                 }
